EPBDS-14175 Remove deprecated Java Security Manager before migration to Java 21